# raoul

./: pyproject.toml  raoul.py  raoul_client.py
tests/: test_raoul.py
