[tool.poetry]
name = "raoul"
version = "0.0.0"
description = ""
authors = ["Hadrien David <hadrien@ectobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.2"
fastapi = "^0.88.0"
hypercorn = "^0.14.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"
asgi-lifespan = "^2.0.0"
black = "^22.12.0"
pylama = "^8.4.1"
isort = "^5.11.3"
coverage = "^6.5.0"
pytest-watch = {git = "https://github.com/aldencolerain/pytest-watch.git", rev = "fix-toml-config"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = 'tests'
addopts = '--cov-report term-missing --strict-markers'

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.pytest-watch]
ext = '.py, .yaml, .cfg'

[tool.pylama]
paths = "raoul tests"
linters = "pycodestyle,pyflakes,pydocstyle"
ignore = "D100,D101,D102,D103,D104,D105,D106,D107,D203,D204,D212,D213,D215,D300,D400,D401,D404,D406,D407,D408,D409,D413,D415"

[tool.pylama.pycodestyle]
max_line_length = 88

[tool.black]
exclude = '.vscode|.eggs|venv'

[tool.isort]
profile = "black"
